@@ -1,5 +1,13 @@
 2007-09-19  Jari Aalto  <jari.aalto@cante.net>
 
+	* etc/template/install.tar.options.tmp: Mention
+	--exclude=cygbuild-no-docdir-install
+
+	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::diff.options):
+	Clarify paragraphs.
+	(HELP::OPTIONAL EXTERNAL FILES::install.tar.options): Document
+	--exclude=cygbuild-no-docdir-install
+
 	* etc/template/Makefile.tmp (clean): Added comments next
 	to targets.
 	(ETCDIR): Remove extra $.
@@ -7,6 +15,8 @@
 	* bin/cygbuild.sh: (CygbuildFileReadOptionsMaybe):
 	Shorten displayed message.
 	(CygbuildCmdBuildMain): Shorten displayed message.
+	(CygbuildInstallPackageDocs): Support new option
+	'cygbuild-no-docdir-install'.
 
 2007-09-18  Jari Aalto  <jari.aalto@cante.net>
 
